--- a/src/main/resources/Templates/School/Classes/addFormClass.html
+++ b/src/main/resources/Templates/School/Classes/addFormClass.html
@@ -43,7 +43,7 @@
         </div>
         <div>
             <label>Grade Class: </label>
-            <input type="tel" th:field="*{grade}" placeholder="Input grade class" name="gradeClass">
+            <input type="number" th:field="*{grade}" min="1" max="12" placeholder="Input grade class" name="gradeClass">
             <div th:if="${#fields.hasErrors('grade')}">
                 <ul>
                     <li th:each="error: ${#fields.hasErrors('grade')}" th:text="${error}"></li>
